# GradleTest

./: .gitignore  README.md  android_config.gradle  build.gradle  checkJson.rb  check_env_path.gradle  doubleGrep.rb  findDuplicatedFiles.rb  gradle.properties  init.gradle  inotifywait_test.sh  inotifywaitfile.sh  properties.gradle  settings.gradle
app/: .gitignore  build.gradle  lint-baseline.xml
app/src/androidTest/java/com/test/cmaketest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Java_com_test_cmaketest_OsApp.cpp  Java_com_test_cmaketest_SyncSession.cpp  NativeObjectReference.cpp  TestData.cpp  TestData.h  U16String.cc  app.cpp  app.hpp  binding_context.hpp  checked_mutex.hpp  connection_change_notifier.cpp  connection_change_notifier.hpp  java_binding_context.cpp  java_binding_context.hpp  java_class.cpp  java_class.hpp  java_class_global_def.cpp  java_class_global_def.hpp  java_global_ref_by_copy.cpp  java_global_ref_by_copy.hpp  java_global_ref_by_move.cpp  java_global_ref_by_move.hpp  java_global_weak_ref.cpp  java_global_weak_ref.hpp  java_local_ref.hpp  java_method.cpp  java_method.hpp  jni_utils.cpp  jni_utils.hpp  load_library.cpp  managed.cc  native-lib.cpp  platform_handle.h  string_conversion.h  task_runner.h  thread_pool.cpp  thread_pool.hpp  uuid.cpp  uuid.hpp  (+3 more)
app/src/main/cpp/android/: jni_util.cc  jni_util.h  jni_weak_ref.cc  jni_weak_ref.h  log_settings.cc  log_settings.h  log_settings_state.cc  logging.cc  logging.h  macros.h  scheduler.hpp  scoped_java_ref.cc  scoped_java_ref.h  string_conversion.cc  string_conversion.h  thread_local.cc  thread_local.h
app/src/main/cpp/cmake/: CMakeFindJavaCommon.cmake  CMakeFindSublimeText2.cmake  CMakePrintHelpers.cmake  CMakePrintSystemInformation.cmake  FindNode.cmake  FindNodeJs.cmake  FindPython.cmake  GitCommitHook.cmake  GitInfoConfig.cmake  IncludeWhatYouUse.cmake  PlatformCheck.cmake  TimeTrace.cmake  UpdateCacheVariable.cmake
app/src/main/java/com/test/cmaketest/: AndroidCapabilities.java  AndroidForeverNotifier.java  Capabilities.java  ConnectionListener.java  ConnectionState.java  FinalizerRunnable.java  ForeverChangedCallback.java  ForeverError.java  ForeverNotifier.java  MainActivity.kt  NativeContext.java  NativeObject.java  NativeObjectReference.java  OsApp.java  SyncNetWorkState.java  Test.kt  U16String.java
app/src/main/java/com/test/cmaketest/impl/: Log.java  Managed.java  Native.java  Platform.java  Stats.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/com/test/cmaketest/: ExampleUnitTest.kt
buildSrc/: ReadMe.md  build.gradle
buildSrc/src/main/groovy/: CreateGitTag.groovy
buildSrc/src/main/groovy/com/mgg/plugin/: HelloPlugin.groovy
gradle/: Check.gradle  CommonPlugin.gradle  Sanitizer.gradle  TestPlugin.gradle
gradle/androidide/: androidide.init.gradle
gradle/wrapper/: gradle-wrapper.properties
javascript/: package-lock.json  watchfile.js
python/: test.py
shell/: checkmac.sh
